[project]
name = "discord-webfic-searcher"
version = "0.0.1"
description = "A Discord bot for creating informational embeds about webfiction links, made in Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" }]

[project.urls]
"Homepage" = "https://github.com/Sachaa-Thanasius/discord-webfic-searcher"
"Bug Tracker" = "https://github.com/Sachaa-Thanasius/discord-webfic-searcher/issues"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
# Credit to @mikeshardmind for most of this setup.
line-length = 120
target-version = "py311"
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q003",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity. Blame typing memes.
    "PLR2004", # Magic value comparison. May remove later.
    "SIM105",  # Suppressable exception. I'm not paying the overhead of contextlib.suppress for stylistic choices.
    "C90",     # McCabe complexity memes.
    "ANN101",  # "Self" annotation for self is implicit.
    "ANN102",  # Same, but for cls.
    "ANN204",  # Special method return types are implicit.
    "ANN401",  # Need Any for args and kwargs.
    "PLR0913", # Number of parameters in a function definition doesn't matter.
    "NPY",     # Numpy isn't relevant to this project.
    "PD",      # Pandas isn't relevant to this project.
]
unfixable = [
    "ERA", # I don't want anything erroneously detected deleted by this.
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403", "PLC0414"] # Importing internal modules usually throws these.

[tool.ruff.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.pyright]
include = ["searcher"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
